--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -159,7 +159,24 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>Serial Port</string>
+      </property>
+     </widget>
+    </item>
     <item row="1" column="1">
+     <widget class="QComboBox" name="serialPortCombo"/>
+    </item>
+    <item row="1" column="3">
+     <widget class="QPushButton" name="btnRefreshPorts">
+      <property name="text">
+       <string>Refresh</string>
+      </property>
+     </widget>
+    </item>
+    <item row="9" column="1">
      <widget class="QPushButton" name="btnDefParams">
       <property name="text">
        <string>Set default params</string>
